[tool.poetry]
name = "longest-word"
version = "0.1.0"
description = ""
authors = ["nathaniel casely hayford <chnate99@gmail.com>"]
readme = "README.md"
packages = [{include = "longest_word"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.2.0"
pylint = "^2.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
